sua bang bao gia + them db

--- a/src/purfume_shop-test/public/frontend/css/custom.css
+++ b/src/purfume_shop-test/public/frontend/css/custom.css
@@ -275,3 +275,8 @@ transition: .3s ease all;
 } 
 
 .pass_show .ptxt:hover{color: #333333;} 
+
+/* Chữ của thanh menu*/
+.small-text {
+    font-size: 14px;
+}
